[package]
name = "rustime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = {version = "4.0.18", features = ["env", "derive"]}
comfy-table = "6.1.2"
owo-colors = "3.5.0"
thiserror = "1.0.37"
time = {version = "0.3.16", features = ["macros", "parsing"]}
